fixing spacing

--- a/Projects/01-ArticleMarkup/main.css
+++ b/Projects/01-ArticleMarkup/main.css
@@ -4,9 +4,6 @@
 	width: 775px;
 	margin: 0 auto;
 }
-a {
-	text-decoration: none;
-}
 h1 {
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 	font-weight: 800;
@@ -74,6 +71,7 @@ nav {
 	font-size: 16px;
 	color: #666;
 	list-style: none;
+	margin-left: -50px;
 }
 ol .nostyle a {
 	color: #666;
@@ -135,6 +133,8 @@ ul {
 	font-family: Georgia;
 	font-size: 16px;
 	color: #222;
+	margin: 0;
+	padding: 0;
 }
 li {
 	padding: 10px;
